# lite-edit

./: .gitignore  .lite-edit-recent  ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  subsystems_todo.md  todo.md
.claude/commands/: orchestrator-monitor.md
.entities/steward/: identity.md
.entities/steward/episodic_index/: index.json
crates/buffer/: Cargo.toml
crates/buffer/src/: buffer_view.rs  gap_buffer.rs  grapheme.rs  lib.rs  line_index.rs  text_buffer.rs  types.rs
crates/buffer/tests/: editing_sequences.rs  grapheme.rs  performance.rs
crates/editor/: Cargo.toml  build.rs
crates/editor/shaders/: glyph.metal
crates/editor/src/: activity_assertion.rs  buffer_file_watcher.rs  buffer_target.rs  clipboard.rs  color_palette.rs  confirm_dialog.rs  confirm_dialog_target.rs  context.rs  dir_picker.rs  dirty_region.rs  drain_loop.rs  editor_event.rs  editor_state.rs  event_channel.rs  file_change_debouncer.rs  file_change_suppression.rs  file_index.rs  file_picker.rs  find_target.rs  focus.rs  font.rs  global_shortcuts.rs  glyph_atlas.rs  glyph_buffer.rs  highlighted_buffer.rs  input.rs  left_rail.rs  lib.rs  main.rs  merge.rs  metal_view.rs  mini_buffer.rs  pane_frame_buffer.rs  pane_layout.rs  perf_stats.rs  renderer.rs  row_scroller.rs  runloop_source.rs  selector.rs  selector_overlay.rs  (+11 more)
crates/editor/src/renderer/: constants.rs  content.rs  find_strip.rs  left_rail.rs  mod.rs  overlay.rs  panes.rs  scissor.rs  status_bar.rs  tab_bar.rs  welcome.rs
crates/editor/tests/: session_persistence.rs  smoke_test.rs  tab_rendering_test.rs  typing_test.rs  viewport_test.rs  wrap_test.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/queries/bash/: indents.scm
crates/syntax/queries/c/: indents.scm
crates/syntax/queries/cpp/: indents.scm
crates/syntax/queries/css/: indents.scm
crates/syntax/queries/go/: indents.scm
crates/syntax/queries/html/: indents.scm
crates/syntax/queries/javascript/: indents.scm
crates/syntax/queries/json/: indents.scm
crates/syntax/queries/markdown/: indents.scm
crates/syntax/queries/python/: indents.scm
crates/syntax/queries/rust/: indents.scm
crates/syntax/queries/toml/: indents.scm
crates/syntax/queries/typescript/: indents.scm
crates/syntax/src/: edit.rs  gotodef.rs  highlighter.rs  indent.rs  lib.rs  registry.rs  symbol_index.rs  theme.rs
crates/syntax/src/queries/: mod.rs  python.rs  rust.rs  typescript.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: agent.rs  cold_scrollback.rs  event.rs  input_encoder.rs  lib.rs  pty.rs  pty_wakeup.rs  style_convert.rs  terminal_buffer.rs  terminal_target.rs
crates/terminal/tests/: agent_integration.rs  input_integration.rs  integration.rs  wakeup_integration.rs
docs/chunks/agent_lifecycle/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/alt_screen_viewport_reset/: GOAL.md  PLAN.md
docs/chunks/app_nap_activity_assertions/: GOAL.md  PLAN.md
docs/chunks/app_nap_blink_timer/: GOAL.md  PLAN.md
docs/chunks/app_nap_file_watcher_pause/: GOAL.md  PLAN.md
docs/chunks/arrow_scroll_wrap_awareness/: GOAL.md  PLAN.md
docs/chunks/base_snapshot_reload/: GOAL.md  PLAN.md
docs/chunks/buffer_file_watching/: GOAL.md  PLAN.md
docs/chunks/buffer_view_trait/: GOAL.md  PLAN.md
docs/chunks/cache_reload_invalidation/: GOAL.md  PLAN.md
docs/chunks/click_cursor_rail_offset/: GOAL.md  PLAN.md
docs/chunks/click_scroll_fraction_alignment/: GOAL.md  PLAN.md
docs/chunks/clipboard_cut/: GOAL.md  PLAN.md
docs/chunks/clipboard_operations/: GOAL.md  PLAN.md
docs/chunks/conflict_mode_lifecycle/: GOAL.md  PLAN.md
docs/chunks/content_tab_bar/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/content_unsaved_tab_tint/: PLAN.md
docs/chunks/cursor_blink_focus/: GOAL.md  PLAN.md
docs/chunks/cursor_blink_pane_focus/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/cursor_blink_stall/: GOAL.md  PLAN.md
docs/chunks/cursor_pointer_ui_hints/: GOAL.md  PLAN.md
docs/chunks/cursor_wrap_scroll_alignment/: GOAL.md  PLAN.md
docs/chunks/delete_backward_word/: GOAL.md  PLAN.md
docs/chunks/delete_to_line_start/: GOAL.md  PLAN.md
docs/chunks/deletion_rename_handling/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/dialog_pointer_cursor/: GOAL.md  PLAN.md
docs/chunks/dirty_bit_navigation/: GOAL.md  PLAN.md
docs/chunks/dirty_region_wrap_aware/: GOAL.md  PLAN.md
docs/chunks/dirty_tab_close_confirm/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/dragdrop_file_paste/: GOAL.md  PLAN.md
docs/chunks/editable_buffer/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/emacs_keybindings/: GOAL.md  PLAN.md
docs/chunks/emacs_line_nav/: GOAL.md  PLAN.md
docs/chunks/emacs_navigation/: PLAN.md
docs/chunks/event_channel_waker/: GOAL.md  PLAN.md
docs/chunks/external_edit_reload/: GOAL.md  PLAN.md
docs/chunks/fallback_glyph_metrics/: GOAL.md  PLAN.md
docs/chunks/file_backed_scrollback/: GOAL.md  PLAN.md
docs/chunks/file_change_events/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/file_open_picker/: GOAL.md  PLAN.md
docs/chunks/file_picker/: GOAL.md  PLAN.md
docs/chunks/file_picker_mini_buffer/: GOAL.md  PLAN.md
docs/chunks/file_picker_scroll/: GOAL.md  PLAN.md
docs/chunks/file_save/: GOAL.md  PLAN.md
docs/chunks/file_search_path_matching/: GOAL.md  PLAN.md
docs/chunks/find_in_file/: GOAL.md  PLAN.md
docs/chunks/find_scroll_wrap_awareness/: GOAL.md  PLAN.md
docs/chunks/find_strip_multi_pane/: GOAL.md  PLAN.md
docs/chunks/find_strip_scroll_clearance/: GOAL.md  PLAN.md
docs/chunks/focus_stack/: GOAL.md  PLAN.md  REVIEW_FEEDBACK.md
docs/chunks/font_fallback_rendering/: GOAL.md  (+1 more)
docs/plans/: 2026-02-23-dirty-tab-close-confirm-design.md  2026-02-23-dirty-tab-close-confirm.md
docs/trunk/: GOAL.md  ORCHESTRATOR.md  SPEC.md  STEWARD.md  TESTING_PHILOSOPHY.md
resources/: Info.plist  LiteEdit.entitlements
scripts/: bundle-app.sh  codesign-app.sh  make-dmg.sh  make-icns.sh  notarize-app.sh
src/: lib.rs  line_index.rs  main.rs  types.rs
tests/: smoke_test.rs
(+597 files in other folders)
