# Chunk: docs/chunks/metal_surface - macOS window + Metal surface foundation
# Chunk: docs/chunks/text_buffer - Text buffer data structure with gap buffer backing

[workspace]
members = ["crates/buffer", "crates/editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
