# Chunk: docs/chunks/metal_surface - macOS window + Metal surface foundation
# Chunk: docs/chunks/text_buffer - Text buffer data structure with gap buffer backing

[workspace]
# Chunk: docs/chunks/terminal_input_encoding - Added input crate
# Chunk: docs/chunks/syntax_highlighting - Added syntax crate
members = ["crates/buffer", "crates/editor", "crates/input", "crates/syntax", "crates/terminal"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
