# Chunk: docs/chunks/text_buffer - Text buffer data structure with gap buffer backing

[package]
name = "lite-edit-buffer"
version.workspace = true
edition.workspace = true
description = "Text buffer implementation for lite-edit"
license.workspace = true

[dependencies]
# No dependencies - standard library only

[dev-dependencies]
# No dev dependencies needed
