# Chunk: docs/chunks/text_buffer - Text buffer data structure with gap buffer backing

[package]
name = "lite-edit-buffer"
version.workspace = true
edition.workspace = true
description = "Text buffer implementation for lite-edit"
license.workspace = true

[dependencies]
# Chunk: docs/chunks/grapheme_cluster_awareness - Unicode grapheme cluster boundary detection
unicode-segmentation = "1.10"

[dev-dependencies]
# No dev dependencies needed
