# Chunk: docs/chunks/metal_surface - macOS window + Metal surface foundation
# Chunk: docs/chunks/glyph_rendering - Monospace glyph atlas + text rendering
# Chunk: docs/chunks/viewport_rendering - Viewport + Buffer-to-Screen Rendering
# Chunk: docs/chunks/editable_buffer - Main loop + input events + editable buffer

[package]
name = "lite-edit"
version.workspace = true
edition.workspace = true
description = "A lightweight, GPU-accelerated text editor for macOS"
license.workspace = true
repository = "https://github.com/example/lite-edit"

[dependencies]
# Text buffer for editing operations
lite-edit-buffer = { path = "../buffer" }
# Chunk: docs/chunks/syntax_highlighting - Syntax highlighting support
lite-edit-syntax = { path = "../syntax" }
# Terminal emulator and agent lifecycle
lite-edit-terminal = { path = "../terminal" }

# Chunk: docs/chunks/terminal_input_encoding - Shared input types
lite-edit-input = { path = "../input" }

# Core Objective-C runtime bindings
objc2 = "0.6"
# Foundation framework (NSString, NSRunLoop, etc.)
objc2-foundation = "0.3"
# AppKit framework (NSApplication, NSWindow, NSView)
objc2-app-kit = "0.3"
# Metal framework bindings
objc2-metal = "0.3"
# Core Animation (CAMetalLayer)
objc2-quartz-core = "0.3"
# Objective-C block support
block2 = "0.6"
# Core Text framework (font loading, glyph rasterization)
objc2-core-text = "0.3"
# Core Graphics framework (bitmap contexts for glyph rendering)
objc2-core-graphics = "0.3"
# Core Foundation framework (CFString, CGFloat, etc.)
objc2-core-foundation = "0.3"
# Filesystem watching (FSEvents on macOS)
notify = "6"
# SHA-256 hashing for identicon generation
# Chunk: docs/chunks/workspace_identicon - Workspace identicons
sha2 = "0.10"
# Chunk: docs/chunks/workspace_session_persistence - Session persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Platform config directory resolution
dirs = "5"

[dev-dependencies]
# Temporary directories for testing
tempfile = "3"

[build-dependencies]

# Chunk: docs/chunks/terminal_input_encoding - Library for shared types
[lib]
name = "lite_edit"
path = "src/lib.rs"

[[bin]]
name = "lite-edit"
path = "src/main.rs"
