# Chunk: docs/chunks/syntax_highlighting - Tree-sitter syntax highlighting

[package]
name = "lite-edit-syntax"
version.workspace = true
edition.workspace = true
description = "Tree-sitter syntax highlighting for lite-edit"
license.workspace = true

[dependencies]
# Text buffer types (Style, Color, Span, StyledLine)
lite-edit-buffer = { path = "../buffer" }

# Core tree-sitter library
tree-sitter = "0.24"
# For iterating over QueryCaptures
streaming-iterator = "0.1"

# Language grammar crates - using versions compatible with tree-sitter 0.24
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.3"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"

[dev-dependencies]
