# Chunk: docs/chunks/terminal_emulator - Terminal emulator backed by alacritty_terminal

[package]
name = "lite-edit-terminal"
version.workspace = true
edition.workspace = true
description = "Terminal emulator for lite-edit backed by alacritty_terminal"
license.workspace = true

[dependencies]
# Terminal emulator core (escape sequence parsing, grid management)
alacritty_terminal = "0.25"

# Cross-platform PTY spawning
portable-pty = "0.8"

# POSIX signal handling for graceful process termination (SIGTERM)
libc = "0.2"

# Low-latency channel for PTY reader thread
crossbeam-channel = "0.5"

# Chunk: docs/chunks/terminal_pty_wakeup - GCD dispatch for run-loop wakeup
dispatch2 = "0.3"

# Temp file creation for cold scrollback storage
tempfile = "3"

# Internal buffer types (BufferView, Style, Span, StyledLine, DirtyLines, etc.)
lite-edit-buffer = { path = "../buffer" }

# Chunk: docs/chunks/terminal_input_encoding - Terminal input encoding
# Input types (KeyEvent, MouseEvent, Modifiers, etc.)
lite-edit-input = { path = "../input" }

[dev-dependencies]
# No dev dependencies needed currently
